Fix wine bottle image cropping: use object-fit contain

--- a/hobbies.css
+++ b/hobbies.css
@@ -324,8 +324,9 @@
 .wine-bottle img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     display: block;
+    padding: 4px;
 }
 
 .wine-info {
